--- a/.github/workflows/fips.yml
+++ b/.github/workflows/fips.yml
@@ -1,20 +1,16 @@
-name: CI
+name: CI FIPS
 
 on:
   push:
-    branches: [master, 'release/**']
+    branches: [master]
     paths-ignore:
       - 'docs/**'
       - '**/*.md'
   pull_request:
-    branches: [master, 'release/**']
+    branches: [master]
     paths-ignore:
       - 'docs/**'
       - '**/*.md'
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/master' && github.run_number || github.ref }}
-  cancel-in-progress: true
 
 permissions:
   contents: read
@@ -28,12 +24,14 @@ jobs:
           - ubuntu-20.04
         os_name:
           - linux_openresty
-          - linux_openresty_1_19
         test_dir:
-          - t/plugin/[a-k]*
-          - t/plugin/[l-z]*
-          - t/admin t/cli t/config-center-yaml t/control t/core t/debug t/deployment t/discovery t/error_page t/misc
-          - t/node t/pubsub t/router t/script t/secret t/stream-node t/utils t/wasm t/xds-library t/xrpc
+          # all plugins only use three parts of openssl API: RSA via ffi, SHA via ffi and SSL API wrapped by nginx.
+          # The latter one is already covered by the core tests, so no need to repeat it in plugin tests.
+          # The RSA and SHA tests are fully covered by jwt-auth and hmac-auth plugin tests, while other plugins only repeat such tests.
+          - t/plugin/jwt-auth2.t t/plugin/jwt-auth.t t/plugin/hmac-auth.t
+          # all SSL related core tests are covered by below two lists.
+          - t/admin/ssl* t/admin/schema.t t/admin/upstream.t t/config-center-yaml/ssl.t t/core/etcd-mtls.t t/core/config_etcd.t t/deployment/conf_server.t t/misc/patch.t
+          - t/node/grpc-proxy-unary.t t/node/upstream-keepalive-pool.t t/node/upstream-websocket.t t/node/client-mtls.t t/node/upstream-mtls.t t/pubsub/kafka.t t/router/radixtree-sni2.t t/router/multi-ssl-certs.t t/router/radixtree-sni.t t/stream-node/mtls.t t/stream-node/tls.t t/stream-node/upstream-tls.t t/stream-node/sni.t
 
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 90
@@ -47,11 +45,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "1.17"
-
       - name: Cache deps
         uses: actions/cache@v3
         env:
@@ -60,13 +53,22 @@ jobs:
           path: deps
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ matrix.os_name }}-${{ hashFiles('rockspec/apisix-master-0.rockspec') }}
 
-      - name: Extract branch name
-        if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
-        id: branch_env
+      - name: Cache openssl-3.0 compilation
+        id: cache-openssl
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-openssl
+        with:
+          path: ~/openssl-3.0
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ matrix.os_name }}
+
+      - name: Toggle openssl compile
+        id: test_ssl_env
         shell: bash
+        if: steps.cache-openssl.outputs.cache-hit != 'true'
         run: |
-          echo "version=${GITHUB_REF##*/}" >>$GITHUB_OUTPUT
-          echo "fullname=apache-apisix-${GITHUB_REF##*/}-src.tgz" >>$GITHUB_OUTPUT
+          echo "openssl3=yes" >>$GITHUB_OUTPUT
+          echo "openssl3_prefix=$HOME" >>$GITHUB_OUTPUT
 
       - name: Extract test type
         shell: bash
@@ -76,10 +78,10 @@ jobs:
           if [[ $test_dir =~ 't/plugin' ]]; then
             echo "type=plugin" >>$GITHUB_OUTPUT
           fi
-          if [[ $test_dir =~ 't/admin ' ]]; then
+          if [[ $test_dir =~ 't/admin' ]]; then
             echo "type=first" >>$GITHUB_OUTPUT
           fi
-          if [[ $test_dir =~ ' t/xrpc' ]]; then
+          if [[ $test_dir =~ 't/node' ]]; then
             echo "type=last" >>$GITHUB_OUTPUT
           fi
 
@@ -91,17 +93,6 @@ jobs:
         run: |
           make ci-env-up project_compose_ci=ci/pod/docker-compose.common.yml
           sudo ./ci/init-common-test-service.sh
-
-      - name: Create tarball
-        if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
-        run: |
-          make compress-tar VERSION=${{ steps.branch_env.outputs.version }}
-
-      - name: Remove source code
-        if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
-        run: |
-          rm -rf $(ls -1 --ignore=*.tgz --ignore=ci --ignore=t --ignore=utils --ignore=.github)
-          tar zxvf ${{ steps.branch_env.outputs.fullname }}
 
       - name: Cache images
         id: cache-images
@@ -118,12 +109,9 @@ jobs:
           if [[ -f docker-images-backup/apisix-images.tar ]]; then
             [[ ${{ steps.test_env.outputs.type }} != first ]] && sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh before
             docker load --input docker-images-backup/apisix-images.tar
-            echo "loaded docker images"
-
-            # preserve storage space
             rm docker-images-backup/apisix-images.tar
-
             make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
+            echo "loaded docker images"
             if [[ ${{ steps.test_env.outputs.type }} != first ]]; then
               sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
             fi
@@ -134,41 +122,28 @@ jobs:
           [[ ${{ steps.test_env.outputs.type }} != first ]] && sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh before
           [[ ${{ steps.test_env.outputs.type }} == plugin ]] && ./ci/pod/openfunction/build-function-image.sh
           make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
+          echo "make ci-env-up, done"
           [[ ${{ steps.test_env.outputs.type }} != first ]] && sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
-          echo "Linux launch services, done."
-      - name: Start Dubbo Backend
-        if: matrix.os_name == 'linux_openresty' && steps.test_env.outputs.type == 'plugin'
-        run: |
-          sudo apt install -y maven
-          cd t/lib/dubbo-backend
-          mvn package
-          cd dubbo-backend-provider/target
-          java -Djava.net.preferIPv4Stack=true -jar dubbo-demo-provider.one-jar.jar > /tmp/java.log &
-
-      - name: Build xDS library
-        if: steps.test_env.outputs.type == 'last'
-        run: |
-          cd t/xds-library
-          go build -o libxds.so -buildmode=c-shared main.go export.go
-
-      - name: Build wasm code
-        if: matrix.os_name == 'linux_openresty' && steps.test_env.outputs.type == 'last'
-        run: |
-          export TINYGO_VER=0.20.0
-          wget https://github.com/tinygo-org/tinygo/releases/download/v${TINYGO_VER}/tinygo_${TINYGO_VER}_amd64.deb 2>/dev/null
-          sudo dpkg -i tinygo_${TINYGO_VER}_amd64.deb
-          cd t/wasm && find . -type f -name "*.go" | xargs -Ip tinygo build -o p.wasm -scheduler=none -target=wasi p
+          echo "Linux launch services, done"
 
       - name: Linux Before install
         run: sudo ./ci/${{ matrix.os_name }}_runner.sh before_install
 
       - name: Linux Install
+        env:
+          COMPILE_OPENSSL3: ${{ steps.test_ssl_env.outputs.openssl3 }}
+          OPENSSL3_PREFIX: ${{ steps.test_ssl_env.outputs.openssl3_prefix }}
+          USE_OPENSSL3: yes
         run: |
           sudo --preserve-env=OPENRESTY_VERSION \
+          --preserve-env=COMPILE_OPENSSL3 \
+          --preserve-env=OPENSSL3_PREFIX \
+          --preserve-env=USE_OPENSSL3 \
           ./ci/${{ matrix.os_name }}_runner.sh do_install
 
       - name: Linux Script
         env:
+          OPENSSL_FIPS: yes
           TEST_FILE_SUB_DIR: ${{ matrix.test_dir }}
         run: sudo -E ./ci/${{ matrix.os_name }}_runner.sh script
 
