--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -422,7 +422,7 @@ graphql:
 
 plugins:      # plugin list (sorted by priority)
   - custom-ctx-var                 # priority: 24000
-  - cmd-args-to-ctx                # priority: 23001
+  - env-to-ctx                # priority: 23001
   - real-ip                        # priority: 23000
   - ai                             # priority: 22900
   - client-control                 # priority: 22000
@@ -533,9 +533,10 @@ stream_plugins: # sorted by priority
     #- name: pingpong
 
 plugin_attr:
-  cmd-args-to-ctx:
-    region: "${{APISIX_REGION}}"
-    zone: "${{APISIX_ZONE}}"
+  env-to-ctx:
+    args:
+      region: "${{APISIX_REGION}}"
+      zone: "${{APISIX_ZONE}}"
   log-rotate:
     interval: 3600    # rotate interval (unit: second)
     max_kept: 168     # max number of log files will be kept
