--- a/ci/pod/vector/vector.toml
+++ b/ci/pod/vector/vector.toml
@@ -23,6 +23,16 @@ port_key = "port"
 shutdown_timeout_secs = 30
 socket_file_mode = 511
 
+
+[sources.log-from-udp]
+type = "socket"
+address = "0.0.0.0:8125"
+host_key = "host"
+mode = "udp"
+port_key = "port"
+
+
+
 [sources.log-from-tls]
 type = "socket"
 address = "0.0.0.0:43000"
@@ -36,7 +46,7 @@ tls.crt_file = "/certs/vector_logs_server.crt"
 tls.key_file = "/certs/vector_logs_server.key"
 
 [sinks.log-2-console]
-inputs = [ "log-from-tcp",  "log-from-tls" ]
+inputs = [ "log-from-tcp",  "log-from-tls", "log-from-udp" ]
 type = "console"
 encoding.codec = "json"
 
@@ -45,6 +55,12 @@ inputs = [ "log-from-tcp" ]
 type = "file"
 encoding.codec = "text"
 path = "/etc/vector/tcp.log"
+
+[sinks.log-2-udp-file]
+inputs = [ "log-from-udp" ]
+type = "file"
+encoding.codec = "json"
+path = "/etc/vector/udp.log"
 
 [sinks.tls-log-2-file]
 inputs = [ "log-from-tls" ]
