--- a/.github/workflows/fips.yml
+++ b/.github/workflows/fips.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - ubuntu-20.04
+          - ubuntu-latest
         os_name:
           - linux_openresty
         test_dir:
