test: replace mock tests with real tests in udp-logger (#9506)

--- a/ci/pod/docker-compose.plugin.yml
+++ b/ci/pod/docker-compose.plugin.yml
@@ -320,6 +320,7 @@ services:
       - ./t/certs:/certs
     ports:
       - '3000:3000'
+      - '8127:8127/udp'
       - '43000:43000'
       - '5140:5140'
       - '5150:5150/udp'
