--- a/.github/workflows/redhat-ci.yaml
+++ b/.github/workflows/redhat-ci.yaml
@@ -136,12 +136,14 @@ jobs:
     - name: Install dependencies
       run: |
         APISIX_VERSION=${{ steps.branch_env.outputs.version }}
+        #If the workflow is not called on release then the env variable wont be set so here we set a version for tests to run
+        if [[ "$APISIX_VERSION" == "" ]];then APISIX_VERSION=3.3.0 fi
         docker exec ubiInstance bash -c "export APISIX_VERSION=$APISIX_VERSION;cd apisix && chmod +x ./ci/redhat-ci.sh && ./ci/redhat-ci.sh install_dependencies"
 
     - name: Install rpm package
       if: ${{ startsWith(github.ref, 'refs/heads/release/') }}
       run: |
-        docker exec ubiInstance bash -c "cd apisix && rpm -iv --prefix=/apisix ./apisix-build-tools/output/apisix-${{ steps.branch_env.outputs.version }}-0.el7.x86_64.rpm"
+        docker exec ubiInstance bash -c "cd apisix && rpm -iv --prefix=/apisix ./apisix-build-tools/output/apisix-${{ steps.branch_env.outputs.version }}-0.ubi8.6.x86_64.rpm"
         # Dependencies are attached with rpm, so revert `make deps`
         docker exec ubiInstance bash -c "cd apisix && rm -rf deps"
         docker exec ubiInstance bash -c "cd apisix && mv usr/bin . && mv usr/local/apisix/* ."
@@ -149,6 +151,8 @@ jobs:
     - name: Run test cases
       run: |
         APISIX_VERSION=${{ steps.branch_env.outputs.version }}
+        #If the workflow is not called on release then the env variable wont be set 
+        if [[ "$APISIX_VERSION" == "" ]];then APISIX_VERSION=3.3.0 fi
         docker exec ubiInstance bash -c "export APISIX_VERSION=$APISIX_VERSION;cd apisix && chmod +x ./ci/redhat-ci.sh && ./ci/redhat-ci.sh run_case"
 
     - if: ${{ steps.cache-images.outputs.cache-hit != 'true' }}
