--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -43,6 +43,7 @@ RUN set -x \
         sudo \
         unzip \
         wget \
+        make \
         libssl-dev \
     && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \ 
     && source "$HOME/.cargo/env" \
