--- a/ci/pod/vector/vector.toml
+++ b/ci/pod/vector/vector.toml
@@ -64,7 +64,7 @@ valid_tokens = [
 ]
 
 [sinks.log-2-console]
-inputs = [ "log-from-tcp",  "log-from-tls", "log-from-syslog-tcp", "log-from-syslog-udp", "log-from-udp", "log-from-splunk", , "log-from-http"]
+inputs = [ "log-from-tcp",  "log-from-tls", "log-from-syslog-tcp", "log-from-syslog-udp", "log-from-udp", "log-from-splunk", "log-from-http"]
 type = "console"
 encoding.codec = "json"
 
