--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -19,8 +19,8 @@
 #
 
 apisix:
-  # node_listen: 9080               # APISIX listening port, if single
-  node_listen:                      # APISIX listening ports, if multiple
+  # node_listen: 9080               # Single APISIX listening port
+  node_listen:                      # Multiple APISIX listening ports
     - 9080
   #   - port: 9081
   #     enable_http2: true          # If not set, default to `false`
@@ -28,9 +28,9 @@ apisix:
   #     port: 9082
   #     enable_http2: true
   enable_admin: true
-  enable_dev_mode: false            # Set nginx worker_processes to 1 if true
-  enable_reuseport: true            # Enable nginx SO_REUSEPORT switch if set to true.
-  show_upstream_status_in_response_header: false # when true all upstream status write to `X-APISIX-Upstream-Status` otherwise only 5xx code
+  enable_dev_mode: false            # If true, nginx worker_processes will be set to 1
+  enable_reuseport: true            # If true, nginx SO_REUSEPORT option will be enabled
+  show_upstream_status_in_response_header: false   # If true, show upstream HTTP status code in the response header `X-APISIX-Upstream-Status`
   enable_ipv6: true
 
   #proxy_protocol:                  # Proxy Protocol configuration
@@ -40,9 +40,9 @@ apisix:
                                     # receive http request with proxy protocol
   #  listen_https_port: 9182        # The port with proxy protocol for https
   #  enable_tcp_pp: true            # Enable the proxy protocol for tcp proxy, it works for stream_proxy.tcp option
-  #  enable_tcp_pp_to_upstream: true # Enables the proxy protocol to the upstream server
+  #  enable_tcp_pp_to_upstream: true # Enable the proxy protocol to the upstream server
   enable_server_tokens: true        # Whether the APISIX version number should be shown in Server header.
-                                    # It's enabled by default.
+                                    # True by default.
 
   # configurations to load third party code and/or override the builtin one.
   extra_lua_path: ""                # extend lua_package_path to load third party code
@@ -213,18 +213,18 @@ nginx_config:                     # config for render the template to generate n
     #custom_lua_shared_dict:       # add custom shared cache to nginx.conf
     #  ipc_shared_dict: 100m       # custom shared cache, format: `cache-key: cache-size`
 
-    # Enables or disables passing of the server name through TLS Server Name Indication extension (SNI, RFC 6066)
+    # Enable or disable passing of the server name through TLS Server Name Indication extension (SNI, RFC 6066)
     # when establishing a connection with the proxied HTTPS server.
     proxy_ssl_server_name: true
     upstream:
-      keepalive: 320                # Sets the maximum number of idle keepalive connections to upstream servers that are preserved in the cache of each worker process.
+      keepalive: 320                # Set the maximum number of idle keepalive connections to upstream servers that are preserved in the cache of each worker process.
                                     # When this number is exceeded, the least recently used connections are closed.
-      keepalive_requests: 1000      # Sets the maximum number of requests that can be served through one keepalive connection.
+      keepalive_requests: 1000      # Set the maximum number of requests that can be served through one keepalive connection.
                                     # After the maximum number of requests is made, the connection is closed.
-      keepalive_timeout: 60s        # Sets a timeout during which an idle keepalive connection to an upstream server will stay open.
+      keepalive_timeout: 60s        # Set a timeout during which an idle keepalive connection to an upstream server will stay open.
     charset: utf-8                  # Adds the specified charset to the "Content-Type" response header field, see
                                     # http://nginx.org/en/docs/http/ngx_http_charset_module.html#charset
-    variables_hash_max_size: 2048   # Sets the maximum size of the variables hash table.
+    variables_hash_max_size: 2048   # Set the maximum size of the variables hash table.
 
     lua_shared_dict:
       internal-status: 10m
