--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -19,46 +19,43 @@
 #
 
 apisix:
-  # node_listen: 9080               # Use this if APISIX listens on a single port.
-  node_listen:                      # Use this if APISIX listens on multiple ports.
+  # node_listen: 9080          # Use this if APISIX listens on a single port.
+  node_listen:                 # Use this if APISIX listens on multiple ports.
     - 9080
-  #   - port: 9081
-  #     enable_http2: true          # If not set, default to `false`.
-  #   - ip: 127.0.0.2               # If not set, default to `0.0.0.0`/
-  #     port: 9082
-  #     enable_http2: true
+    # - port: 9081
+    #   enable_http2: true     # If not set, default to `false`.
+    # - ip: 127.0.0.2          # If not set, default to `0.0.0.0`/
+    #   port: 9082
+    #   enable_http2: true
   enable_admin: true
-  enable_dev_mode: false            # If true, nginx worker_processes will be set to 1.
-  enable_reuseport: true            # If true, nginx SO_REUSEPORT option will be enabled.
+  enable_dev_mode: false       # If true, nginx worker_processes will be set to 1.
+  enable_reuseport: true       # If true, nginx SO_REUSEPORT option will be enabled.
   show_upstream_status_in_response_header: false  # If true, include the upstream HTTP status code in
                                                   # the response header `X-APISIX-Upstream-Status`.
                                                   # If false, show `X-APISIX-Upstream-Status` only if
                                                   # the upstream response code is 5xx.
   enable_ipv6: true
+
+  # proxy_protocol:                    # PROXY Protocol configuration
+  #   listen_http_port: 9181           # APISIX listening port for HTTP traffic with PROXY protocol.
+  #   listen_https_port: 9182          # APISIX listening port for HTTPS traffic with PROXY protocol.
+  #   enable_tcp_pp: true              # Enable the PROXY protocol when stream_proxy.tcp is set.
+  #   enable_tcp_pp_to_upstream: true  # Enable the PROXY protocol.
   
-  #proxy_protocol:                    # PROXY Protocol Configuration
-  #  listen_http_port: 9181           # APISIX listening port for HTTP traffic with PROXY protocol.
-  #  listen_https_port: 9182          # APISIX listening port for HTTPS traffic with PROXY protocol.
-  #  enable_tcp_pp: true              # Enable the PROXY protocol for TCP proxy when stream_proxy.tcp is set.
-  #  enable_tcp_pp_to_upstream: true  # Enable the PROXY protocol.
-  enable_server_tokens: true          # If ture, show APISIX version in the `Server` response header.
+  enable_server_tokens: true           # If ture, show APISIX version in the `Server` response header.
+  extra_lua_path: ""                   # Extend lua_package_path to load third-party code.
+  extra_lua_cpath: ""                  # Extend lua_package_cpath to load third-party code.
+  # lua_module_hook: "my_project.my_hook"  # Hook module used to inject third-party code into APISIX.
 
-  # configurations to load third party code and/or override the builtin one.
-  extra_lua_path: ""                # extend lua_package_path to load third party code
-  extra_lua_cpath: ""               # extend lua_package_cpath to load third party code
-  #lua_module_hook: "my_project.my_hook"  # the hook module which will be used to inject third party code into APISIX
-
-  proxy_cache:                      # Proxy Caching configuration
-    cache_ttl: 10s                  # The default caching time in disk if the upstream does not specify the cache time
-    zones:                          # The parameters of a cache
-      - name: disk_cache_one        # The name of the cache, administrator can specify
-                                    # which cache to use by name in the admin api (disk|memory)
-        memory_size: 50m            # The size of shared memory, it's used to store the cache index for
-                                    # disk strategy, store cache content for memory strategy (disk|memory)
-        disk_size: 1G               # The size of disk, it's used to store the cache data (disk)
-        disk_path: /tmp/disk_cache_one  # The path to store the cache data (disk)
-        cache_levels: 1:2           # The hierarchy levels of a cache (disk)
-      #- name: disk_cache_two
+  proxy_cache:      # Proxy Caching configuration
+    cache_ttl: 10s  # The default caching time on disk if the upstream does not specify a caching time.
+    zones:
+      - name: disk_cache_one    # Name of the cache.
+        memory_size: 50m        # Size of the memory to store the cache index.
+        disk_size: 1G           # Size of the disk to store the cache data.
+        disk_path: /tmp/disk_cache_one  # Path to the cache file for disk cache.
+        cache_levels: 1:2               # Cache hierarchy levels of disk cache.
+      # - name: disk_cache_two
       #  memory_size: 50m
       #  disk_size: 1G
       #  disk_path: "/tmp/disk_cache_two"
