--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -19,8 +19,8 @@
 #
 
 apisix:
-  # node_listen: 9080          # Use this if APISIX listens on a single port.
-  node_listen:                 # Use this if APISIX listens on multiple ports.
+  # node_listen: 9080          # APISIX listening port.
+  node_listen:                 # APISIX listening ports.
     - 9080
     # - port: 9081
     #   enable_http2: true     # If not set, default to `false`.
@@ -82,6 +82,7 @@ apisix:
   #   udp:                        # UDP proxy listening ports 
   #     - 9200
   #     - "127.0.0.1:9201"
+  
   # dns_resolver:                 # If not set, read from `/etc/resolv.conf`
   #   - 1.1.1.1
   #   - 8.8.8.8
@@ -92,28 +93,32 @@ apisix:
   
   ssl:
     enable: true
-    listen:                       # APISIX listening port in https.
+    listen:                                      # APISIX listening port for HTTPS traffic.
       - port: 9443
         enable_http2: true
-    #   - ip: 127.0.0.3           # Specific IP, If not set, the default value is `0.0.0.0`.
-    #     port: 9445
-    #     enable_http2: true
-    #ssl_trusted_certificate: /path/to/ca-cert  # Specifies a file path with trusted CA certificates in the PEM format
-                                                # used to verify the certificate when APISIX needs to do SSL/TLS handshaking
-                                                # with external services (e.g. etcd)
-    ssl_protocols: TLSv1.2 TLSv1.3
+      # - ip: 127.0.0.3                          # If not set, default to `0.0.0.0`.
+      #   port: 9445
+      #   enable_http2: true
+    # ssl_trusted_certificate: /path/to/ca-cert  # Path to CA certificates in the PEM format.
+    ssl_protocols: TLSv1.2 TLSv1.3               # TLS versions supported.
     ssl_ciphers: ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
-    ssl_session_tickets: false              #  disable ssl_session_tickets by default for 'ssl_session_tickets' would make Perfect Forward Secrecy useless.
-                                            #  ref: https://github.com/mozilla/server-side-tls/issues/135
+    ssl_session_tickets: false  # If true, session tickets are used for SSL/TLS connections.
+                                # Disabled by default because it renders Perfect Forward Secrecy (FPS) 
+                                # useless. See https://github.com/mozilla/server-side-tls/issues/135.
 
-    key_encrypt_salt:             #  If not set, will save origin ssl key into etcd.
-      - edd1c9f0985e76a2          #  If set this, the key_encrypt_salt should be an array whose elements are string, and the size is also 16, and it will encrypt ssl key with AES-128-CBC
-                                  #  !!! So do not change it after saving your ssl, it can't decrypt the ssl keys have be saved if you change !!
-                                  #  Only use the first key to encrypt, and decrypt in the order of the array.
+    key_encrypt_salt:           # Salt SSL key before saving to etcd.
+      - edd1c9f0985e76a2        # If this is set, the key_encrypt_salt should be an array of 16-byte
+                                # strings. SSL keys will be encrypted using AES-128-CBC with the 
+                                # specified salt value before being stored in etcd.
+                                # CAUTION: DO NOT CHANGE THE SALT VALUE AFTER SAVING THE SSL KEYS. 
+                                # OTHERWISE THE ENCRYPTED KEY CANNOT BE DECRYPTED.
+                                # Only use the first key to encrypt, and decrypt in the order of the array.
 
-    #fallback_sni: "my.default.domain"      # If set this, when the client doesn't send SNI during handshake, the fallback SNI will be used instead
-  enable_control: true
-  #control:
+    # fallback_sni: "my.default.domain"      # Fallback SNI to use if client does not send SNI during 
+                                             # the handshake.
+    
+  enable_control: true    # Enable Control API
+  # control:
   #  ip: 127.0.0.1
   #  port: 9090
   disable_sync_configuration_during_start: false  # safe exit. Remove this once the feature is stable
