--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -27,7 +27,7 @@ apisix:
     # - ip: 127.0.0.2          # If not set, default to `0.0.0.0`/
     #   port: 9082
     #   enable_http2: true
-  enable_admin: true
+  enable_admin: true           # Admin API
   enable_dev_mode: false       # If true, nginx worker_processes will be set to 1.
   enable_reuseport: true       # If true, nginx SO_REUSEPORT option will be enabled.
   show_upstream_status_in_response_header: false  # If true, include the upstream HTTP status code in
