--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -28,8 +28,8 @@ apisix:
     #   port: 9082
     #   enable_http2: true
   enable_admin: true           # Admin API
-  enable_dev_mode: false       # If true, nginx worker_processes will be set to 1.
-  enable_reuseport: true       # If true, nginx SO_REUSEPORT option will be enabled.
+  enable_dev_mode: false       # If true, set nginx worker_processes to 1.
+  enable_reuseport: true       # If true, enable nginx SO_REUSEPORT option.
   show_upstream_status_in_response_header: false  # If true, include the upstream HTTP status code in
                                                   # the response header `X-APISIX-Upstream-Status`.
                                                   # If false, show `X-APISIX-Upstream-Status` only if
