Update info about Nginx CPU affinity

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -135,12 +135,15 @@ nginx_config:                     # Config for render the template to generate n
   # user: root                    # Specify the execution user of the worker process. This is only  
                                   # effective if the master process runs with super-user privileges.
   error_log: logs/error.log       # Location of the error.log
-  error_log_level:  warn          # Logging level: info, debug, notice, warn, error, crit, alert, or emerg
+  error_log_level:  warn          # Logging level: info, debug, notice, warn, error, crit, alert, or emerg.
   worker_processes: auto          # Automatically determine the optimal number of worker processes based
                                   # on the available system resources. 
                                   # If you want use multiple cores in container, you can inject the number of 
                                   # CPU cores as environment variable "APISIX_WORKER_PROCESSES".
-  enable_cpu_affinity: false      # disable CPU affinity by default, if APISIX is deployed on a physical machine, it can be enabled and work well.
+  enable_cpu_affinity: false      # Disable CPU affinity by default as worker_cpu_affinity affects the 
+                                  # behavior of APISIX in containers. For example, multiple instances could 
+                                  # be bound to one CPU core, which is not desirable.
+                                  # If APISIX is deployed on a physical machine, CPU affinity can be enabled.
   worker_rlimit_nofile: 20480     # the number of files a worker process can open, should be larger than worker_connections
   worker_shutdown_timeout: 240s   # timeout for a graceful shutdown of worker processes
 
